src/test/deca/context/valid/provided/use_new.deca
// DESCRIPTION : While
// RESUTLAT :
class A {}

{
    A a = new A();
}
