src/test/deca/context/invalid/provided/ThisInMain.deca
// DESCRIPTION: utilisation de this dans le main
// RESULTAT: 

class A {
	 int a ;
}

{
         
	this.a = 5 ;

}
